# iscore-plugin-coppa

./: .gitmodules  CMakeLists.txt  README.md
ossia_wrapper/: domain.cpp  domain.hpp  ossia.cpp  ossia.hpp  ossia_wrapper.hpp
ossia_wrapper/generic/: Address.hpp  Device.hpp  Node.hpp
ossia_wrapper/local/: Address.cpp  Address.hpp  Device.hpp  Node.hpp  Protocol.cpp  Protocol.hpp
ossia_wrapper/minuit/: Device.hpp  MinuitAddress.cpp  MinuitAddress.hpp  MinuitDevice.cpp  MinuitDevice.hpp  MinuitNode.hpp  MinuitProtocol.cpp  MinuitProtocol.hpp  Node.hpp  Protocol.cpp  Protocol.hpp
ossia_wrapper/osc/: Address.hpp  Device.hpp  Node.hpp  Protocol.cpp  Protocol.hpp
ossia_wrapper/src/: AtomicUpdate.hpp  CMakeLists.txt  coppa  coppaAddress.cpp  coppaAddress.hpp  coppaDevice.cpp  coppaDevice.hpp  coppaNode.cpp  coppaNode.hpp  coppaProtocol.cpp  coppaProtocol.hpp
src/: coppa.Control.cpp  coppa.Control.hpp  iscore_plugin_coppa.cpp  iscore_plugin_coppa.hpp
src/OSCQuery/: OSCQueryDevice.cpp  OSCQueryDevice.hpp  OSCQueryProtocolFactory.hpp  OSCQueryProtocolSettingsWidget.cpp  OSCQueryProtocolSettingsWidget.hpp  OSCQuerySpecificSettings.hpp  OSCQuerySpecificSettingsSerialization.cpp
